--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,16 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
+    
+    <div class="container">
+        <span class="text-size-18px color-white font-poppins cursor">Click, explore, discover: Check out our latest research.</span>
+        <span></span>
+    </div>
 
     <header>
         <span class="font-poppins text-size-20px color-white" id="animated-text">Symptom Tracker: Pinpointing COVID-19 or Influenza</span>
+        <br><br><br><br>
+        <span class="text-size-20px font-poppins font-600">We Make Quality <span class="color-green">HealthCare</span></span>
     </header>
 
     <main class="main-1">
@@ -19,6 +26,7 @@
             <source src="../static/videoo.mp4" type="video/mp4">
         </video>
     </main>
+    <br><br>
 
     <main class="main-2">
         <img class="img" src="../static/main-2.jpg" alt="">
