--- a/static/typhgraph.css
+++ b/static/typhgraph.css
@@ -1,7 +1,23 @@
+.text-size-18px{
+    font-size: 18px;
+}
+
 .text-size-20px{
     font-size: 40px;
 }
 
 .color-white{
     color: white;
+}
+
+.color-green{
+    color: green;
+}
+
+.font-600{
+    font-weight: 600;
+}
+
+.cursor{
+    cursor: pointer;
 }
