Research file has been deployed

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="container">
-        <span class="text-size-18px color-white font-poppins cursor">Click, explore, discover: Check out our latest research.</span>
+        <a href="{{ url_for('research') }}" class="text-size-18px color-white font-poppins cursor">Click, explore, discover: Check out our latest research.</a>
         <span></span>
     </div>
 
