--- a/static/typhgraph.css
+++ b/static/typhgraph.css
@@ -1,5 +1,13 @@
+.text-size-14px{
+    font-size: 14px;
+}
+
 .text-size-18px{
     font-size: 18px;
+}
+
+.text-size-22px{
+    font-size: 22px;
 }
 
 .text-size-35px{
